Overflow Bug Fixed

--- a/Backup CSS/style.css
+++ b/Backup CSS/style.css
@@ -28,6 +28,7 @@ html {
   font-size: 62.5%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media (max-width: 75em) {
