--- a/SCSS/base/_base.scss
+++ b/SCSS/base/_base.scss
@@ -14,6 +14,7 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    overflow-x: hidden;
 
     @include respond(1200px){
         font-size: 58%;
